Fix small layout issue 2nd (#107)

--- a/packages/verification-vue-component/src/style/components/verification/_item_list.scss
+++ b/packages/verification-vue-component/src/style/components/verification/_item_list.scss
@@ -137,6 +137,7 @@
                         h3 {
                             padding-top: 12px;
                             color: $verification-result-error-dark;
+                            font-size: 1.25rem;
                         }
                     }
                 }
